add_executable(scannerHMI scannerHMI.cpp)
target_compile_features(scannerHMI PRIVATE cxx_std_11)
target_link_libraries(scannerHMI scanner logger)

add_executable(gpioExample gpioExample.cpp)
#target_compile_features(gpioExample PRIVATE cxx_std_14)
target_link_libraries(gpioExample GPIO)
add_deploy_target(gpioExample)

add_executable(NumpadDriverExample	NumpadDriverExample.cpp)
target_compile_features(NumpadDriverExample PRIVATE cxx_std_11)
target_link_libraries(NumpadDriverExample PRIVATE NumpadDriver)
add_deploy_target(NumpadDriverExample)

add_executable(DisplayDriverExample	DisplayDriverExample.cpp)
target_compile_features(DisplayDriverExample PRIVATE cxx_std_11)
target_link_libraries(DisplayDriverExample PRIVATE DisplayDriver)
add_deploy_target(DisplayDriverExample)
